implemented position slider

--- a/Xamarin.Forms.TikTok/Pages/HomePage.xaml
+++ b/Xamarin.Forms.TikTok/Pages/HomePage.xaml
@@ -53,7 +53,9 @@
                 <DataTemplate>
                     <controls:HomeViewVideoControl VideoUrl="{Binding VideoUrl}"
                                                    IsPlaying="{Binding IsPlaying}"
-                                                   x:DataType="models:TikTokItem"/>
+                                                   x:DataType="models:TikTokItem"
+                                                   MediaStarted="HomeViewVideoControl_OnMediaStarted"
+                                                   MediaStopped="HomeViewVideoControl_OnMediaStopped"/>
                 </DataTemplate>
             </panCardView:CarouselView.ItemTemplate>
         </panCardView:CarouselView>
@@ -166,7 +168,7 @@
         <!-- B O T T O M -->
         <Grid ColumnDefinitions="*, Auto"
               VerticalOptions="End"
-              Margin="20,0,10,10"
+              Margin="20,0,10,25"
               Grid.Row="1">
 
             <StackLayout Orientation="Vertical"
