--- a/Xamarin.Forms.TikTok/Controls/HomeViewVideoControl.xaml
+++ b/Xamarin.Forms.TikTok/Controls/HomeViewVideoControl.xaml
@@ -1,10 +1,27 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:shared="clr-namespace:LibVLCSharp.Forms.Shared;assembly=LibVLCSharp.Forms"
              x:Class="Xamarin.Forms.TikTok.Controls.HomeViewVideoControl"
              x:Name="Root">
     <Grid>
-        <shared:VideoView MediaPlayer="{Binding Source={x:Reference Root}, Path=MediaPlayer}"/>
+        <shared:VideoView MediaPlayer="{Binding Source={x:Reference Root}, Path=MediaPlayer}" />
+        
+        <Grid BackgroundColor="Black"
+              Margin="0,0,0,-10"
+              IsClippedToBounds="False"
+              VerticalOptions="End">
+              <Grid HeightRequest="15"/>
+        </Grid>
+
+        <Slider x:Name="PositionSlider"
+                ThumbColor="White"
+                Maximum="1.0"
+                VerticalOptions="End"
+                Margin="-14, 0, -14, -2"
+                InputTransparent="True"
+                MaximumTrackColor="Gray"
+                MinimumTrackColor="White"/>
     </Grid>
-</ContentView>  
+</ContentView>
