--- a/Xamarin.Forms.TikTok/Pages/RecordPage.xaml
+++ b/Xamarin.Forms.TikTok/Pages/RecordPage.xaml
@@ -6,7 +6,7 @@
              xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
              xmlns:viewModels="clr-namespace:Xamarin.Forms.TikTok.Core.ViewModels;assembly=Xamarin.Forms.TikTok.Core"
              x:Class="Xamarin.Forms.TikTok.Pages.RecordPage"
-             BackgroundColor="Brown"
-             IconImageSource="ic_add.png">
+             IconImageSource="ic_add.png"
+             Title="Create">
     
 </views:MvxContentPage>
